plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.minecraftforge.gradle' version '6.0.+'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    maven {
        name = "Alibaba"
        url = "https://maven.aliyun.com/repository/public/"
    }
    maven {
        name = "Alibaba Google"
        url = "https://maven.aliyun.com/repository/google/"
    }
    maven {
        name = "Alibaba Gradle Plugin"
        url = "https://maven.aliyun.com/repository/gradle-plugin/"
    }
    maven {
        name = "HuaweiCloud"
        url = "https://mirrors.huaweicloud.com/repository/maven/"
    }
    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/releases/"
    }
    maven {
        name = "NeoForged"
        url = "https://maven.neoforged.net/releases/"
    }
    maven {
        name = "AE2 Maven"
        url = "https://maven.appliedenergistics.org/releases/"
    }
    maven {
        name = "Curios Maven"
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'parchment', version: "${parchment_minecraft_version}-${parchment_mappings_version}-${minecraft_version}"
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            args '--nogui'
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    // EMI for Forge 1.20.1
    compileOnly "dev.emi:emi-forge:${emi_version}:api"
    runtimeOnly "dev.emi:emi-forge:${emi_version}"

    // AE2 (Forge/NeoForge unified jar for 1.20.1)
    compileOnly "org.appliedenergistics:appliedenergistics2:${ae2_version}"

    // Optional integrations: provided via local libs (drop into libs/)
    // BeyondDimensions, ExtendedAE+, Ars Nouveau are loaded reflectively at runtime,
    // so they are not required at compile time except for direct API references.
    // If you need to compile against them, drop the jars into libs/ and uncomment:
    // compileOnly files('libs/beyonddimensions-1.20.1-forge.jar')
    // compileOnly files('libs/extendedae_plus-1.20.1-forge.jar')
    // compileOnly files('libs/ars_nouveau-1.20.1-forge.jar')
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             forge_version          : forge_version,
                             forge_version_range    : forge_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata

// Force re-run so CI with -Pmod_version always gets expanded metadata
tasks.named("generateModMetadata") {
    outputs.upToDateWhen { false }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

jar {
    manifest {
        attributes([
            'Specification-Title'     : mod_id,
            'Specification-Vendor'    : mod_authors,
            'Specification-Version'   : '1',
            'Implementation-Title'    : project.name,
            'Implementation-Version'  : mod_version,
            'Implementation-Vendor'   : mod_authors,
            'MixinConfigs'            : "${mod_id}.mixins.json"
        ])
    }
}
